  * [Christian] pre9 package db upgrade
  * [Christian] Removed stricter dependency on debconf, to be able to run
    on woody
  * [Christian] removed dns.head for simple config and added test in dns
    cron
  * [Christian] applied Jim Nutt (jimnutt) patch [ #183 ] Fixes an ip
    address in dns config
  * [Roland] Adapted to run with Mailman 2.1.

 -- Roland Mas <lolando@debian.org>  Thu, 13 Feb 2003 18:52:20 +0100

gforge (3pre8-0+) experimental; urgency=low

  * [Roland] Reencoded this changelog into UTF-8, as per upcoming policy
    changes (see bug #174982).
  * [Roland] Also, changed version to reflect the pre8 status of the
    current code.
  * [Roland] Stricter dependency on debconf, to fix a Lintian warning.
  * [Roland] Die on error when installing the DB.
  * [Roland] Do not forget 20021213.sql...
  * [Roland] Generate a random password for the LDAP stuff if the user
    doesn't provide one.
  * [Christian] Applied Olafur Osvaldsson patch #143, Incorrect user
    permissions on upload dir 
  * [Roland] Several changes occured in PostgreSQL between versions 7.2
    and 7.3: the pg_hba.conf file syntax, the way users are authenticated,
    and data checking is stricter.  The installation process should now
    work with both versions (provided the PostgreSQL server is installed
    correctly).
  * [Roland] Applied patches #103 and #104 fixing stuff related with
    Apache-SSL / Apache + mod_ssl.  Thanks, Julien Goodwin
    <laptop006@users.gforge.org>.
  * [Roland] Applied patch #102.  At last, a serious attempt at a working
    install-postfix.sh.  Thanks again, Julien Goodwin.

 -- Roland Mas <lolando@debian.org>  Wed, 15 Jan 2003 17:15:52 +0100

gforge (3.0-0+8) experimental; urgency=low

  * [Christian] Reintroduce the possibility to define default home page in
    Themes
  * [Christian] Added subMenu in Layout
  * [Roland] Merged in everything that was done on the trunk since
    Branch_gforge was started.  That includes the plugin subsystem.