@@ -13,8 +13,10 @@ gforge (3pre9-0+2) experimental; urgency=low
   * [Christian] applied Jim Nutt (jimnutt) patch [ #183 ] Fixes an ip
     address in dns config
   * [Roland] Adapted to run with Mailman 2.1.
+  * [Christian] Adjusted sequence in language table
+  * [Christian] Adjusted stateid in doc_data
 
- -- Roland Mas <lolando@debian.org>  Thu, 13 Feb 2003 18:52:20 +0100
+ -- Christian Bayle <bayle@debian.org>  Sat,  1 Mar 2003 01:16:34 +0100
 
 gforge (3pre8-0+) experimental; urgency=low
 
